--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/MainWindowView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/MainWindowView.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SystemAnalysisAndDesign"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindowView" Height="760" Width="1280">
     <Grid>
-
+        <Border Background="#f6eefb" BorderThickness="2" BorderBrush = "#ebedf3"
+        Padding="20" >
+        </Border>
     </Grid>
 </Window>
