--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/App.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SystemAnalysisAndDesign"
-             StartupUri="Views/MainWindowView.xaml">
+             StartupUri="Views/MainWindowView/MainWindowMainView.xaml">
     <Application.Resources>
          
     </Application.Resources>
