--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/MainWindowView/MainWindowMainView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/MainWindowView/MainWindowMainView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SystemAnalysisAndDesign"
         mc:Ignorable="d"
-        Title="MainWindowView" Height="760" Width="1280">
+        Title="MainWindowMainView" Height="760" Width="1280">
     <Grid>
         <Border Background="#f6eefb" BorderThickness="2" BorderBrush = "#ebedf3"
         Padding="20" >
