--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/App.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SystemAnalysisAndDesign"
-             StartupUri="Views/DetailCarRentView/DetailCarRentMainView.xaml">
+             StartupUri="Views\CategoryCarRentView\CategoryCarRentView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
