--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/MainWindowView/MainWindowMainView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/MainWindowView/MainWindowMainView.xaml
@@ -187,50 +187,55 @@
                 </Grid.ColumnDefinitions>
                 
                 <Border Grid.Column="0" Background="#E3F2FD" CornerRadius ="10"
-                        Width ="Auto" Height ="Auto"
+                        Width ="150" Height ="Auto"
                         Margin ="10">
                     <StackPanel Margin ="10">
                         <TextBlock TextWrapping ="Wrap"
+                                   TextAlignment="Center"
                                    Text ="Audi"
                                    FontSize ="18"
                                    Margin="0,0,0,5"/>
                     </StackPanel>
                 </Border>
                 <Border Grid.Column="1" Background="#E3F2FD" CornerRadius ="10"
-                        Width ="Auto" Height ="Auto"
+                        Width ="150" Height ="Auto"
                         Margin ="10">
                     <StackPanel Margin ="10">
                         <TextBlock TextWrapping ="Wrap"
+                                   TextAlignment="Center"
                                    Text ="Mercedez"
                                    FontSize ="18"
                                    Margin="0,0,0,5"/>
                     </StackPanel>
                 </Border>
                 <Border Grid.Column="2" Background="#E3F2FD" CornerRadius ="10"
-                        Width ="Auto" Height ="Auto"
+                        Width ="150" Height ="Auto"
                         Margin ="10">
                     <StackPanel Margin ="10">
                         <TextBlock TextWrapping ="Wrap"
+                                   TextAlignment="Center"
                                    Text ="Land Rover"
                                    FontSize ="18"
                                    Margin="0,0,0,5"/>
                     </StackPanel>
                 </Border>
                 <Border Grid.Column="3" Background="#E3F2FD" CornerRadius ="10"
-                        Width ="Auto" Height ="Auto"
+                        Width ="150" Height ="Auto"
                         Margin ="10">
                     <StackPanel Margin ="10">
                         <TextBlock TextWrapping ="Wrap"
+                                   TextAlignment="Center"
                                    Text ="Ferrari"
                                    FontSize ="18"
                                    Margin="0,0,0,5"/>
                     </StackPanel>
                 </Border>
                 <Border Grid.Column="4" Background="#E3F2FD" CornerRadius ="10"
-                        Width ="Auto" Height ="Auto"
+                        Width ="150" Height ="Auto"
                         Margin ="10">
                     <StackPanel Margin ="10">
                         <TextBlock TextWrapping ="Wrap"
+                                   TextAlignment="Center"
                                    Text ="Tesla"
                                    FontSize ="18"
                                    Margin="0,0,0,5"/>
