--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/MainWindowView/MainWindowMainView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/MainWindowView/MainWindowMainView.xaml
@@ -100,7 +100,7 @@
                 <!-- Pháº§n dá»‹ch vá»¥ -->
                 <StackPanel Grid.Column="1">
                     <TextBlock Text="Our Services"
-                               FontSize="24"
+                               FontSize="30"
                                FontWeight="Bold"
                                Foreground="#1A237E"
                                Margin="0,0,0,20"/>
@@ -111,7 +111,8 @@
                         <StackPanel Margin="10,0,0,0">
                             <TextBlock Text ="Car Hire"
                                        FontWeight="Bold"
-                                       FontSize ="20"/>
+                                       FontSize ="20"
+                                       Padding="0,0,0,10"/>
                             <TextBlock TextWrapping ="Wrap"
                                        Text ="We pride ourselves in always going the extra mile for our customers."
                                        FontSize ="16"/>
@@ -124,7 +125,8 @@
                         <StackPanel Margin="10,0,0,0">
                             <TextBlock Text ="Car Sales"
                                        FontWeight="Bold"
-                                       FontSize ="20"/>
+                                       FontSize ="20"
+                                       Padding="0,0,0,10"/>
                             <TextBlock TextWrapping ="Wrap"
                                        Text ="We sale the best luxury cars across the world at a competitive price."
                                        FontSize ="16"/>
@@ -138,7 +140,8 @@
                             <StackPanel Margin="10,0,0,0">
                                 <TextBlock Text ="Car Sales"
                                            FontWeight="Bold"
-                                           FontSize ="20"/>
+                                           FontSize ="20"
+                                           Padding="0,0,0,10"/>
                                 <TextBlock TextWrapping ="Wrap"
                                            Text ="We sale the best luxury cars across the world at a competitive price."
                                            FontSize ="16"/>
@@ -153,7 +156,7 @@
                     <TextBlock TextWrapping ="Wrap"
                                Text ="We Have Everything You Need"
                                FontWeight="Bold"
-                               FontSize ="18"/>
+                               FontSize ="30"/>
                 </StackPanel>
             </Grid>
             
@@ -178,7 +181,7 @@
                             <StackPanel VerticalAlignment="Center">
                                 <TextBlock Text ="Mercedez C1000"
                                            FontWeight="Bold"
-                                           FontSize ="20"
+                                           FontSize ="24"
                                            TextAlignment="Center"/>
                             </StackPanel>
                         </Border>
@@ -256,7 +259,7 @@
                             <StackPanel VerticalAlignment="Center">
                                 <TextBlock Text ="Mercedez C1000"
                                            FontWeight="Bold"
-                                           FontSize ="20"
+                                           FontSize ="24"
                                            TextAlignment="Center"/>
                             </StackPanel>
                         </Border>
@@ -334,7 +337,7 @@
                             <StackPanel VerticalAlignment="Center">
                                 <TextBlock Text ="Mercedez C1000"
                                            FontWeight="Bold"
-                                           FontSize ="20"
+                                           FontSize ="24"
                                            TextAlignment="Center"/>
                             </StackPanel>
                         </Border>
@@ -406,7 +409,7 @@
                     <TextBlock TextWrapping ="Wrap"
                                Text ="Our Luxury Brand"
                                FontWeight="Bold"
-                               FontSize ="18"/>
+                               FontSize ="30"/>
                 </StackPanel>
             </Grid>
             
@@ -426,7 +429,7 @@
                         <TextBlock TextWrapping ="Wrap"
                                    TextAlignment="Center"
                                    Text ="Audi"
-                                   FontSize ="18"
+                                   FontSize ="20"
                                    Margin="0,0,0,5"/>
                     </StackPanel>
                 </Border>
@@ -437,7 +440,7 @@
                         <TextBlock TextWrapping ="Wrap"
                                    TextAlignment="Center"
                                    Text ="Mercedez"
-                                   FontSize ="18"
+                                   FontSize ="20"
                                    Margin="0,0,0,5"/>
                     </StackPanel>
                 </Border>
@@ -448,7 +451,7 @@
                         <TextBlock TextWrapping ="Wrap"
                                    TextAlignment="Center"
                                    Text ="Land Rover"
-                                   FontSize ="18"
+                                   FontSize ="20"
                                    Margin="0,0,0,5"/>
                     </StackPanel>
                 </Border>
@@ -459,7 +462,7 @@
                         <TextBlock TextWrapping ="Wrap"
                                    TextAlignment="Center"
                                    Text ="Ferrari"
-                                   FontSize ="18"
+                                   FontSize ="20"
                                    Margin="0,0,0,5"/>
                     </StackPanel>
                 </Border>
@@ -470,7 +473,7 @@
                         <TextBlock TextWrapping ="Wrap"
                                    TextAlignment="Center"
                                    Text ="Tesla"
-                                   FontSize ="18"
+                                   FontSize ="20"
                                    Margin="0,0,0,5"/>
                     </StackPanel>
                 </Border>
@@ -481,7 +484,7 @@
                 <StackPanel Margin ="0,10,0,-20" HorizontalAlignment="Center" VerticalAlignment="Top">
                     <TextBlock TextWrapping ="Wrap"
                                FontWeight="Bold"
-                               FontSize ="18"
+                               FontSize ="30"
                                TextAlignment="Center">
                         Find the best experience 
                         <LineBreak/>
