--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/App.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/App.xaml
@@ -2,9 +2,19 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SystemAnalysisAndDesign"
-             StartupUri="Views/DetailCarRentView/DetailCarRentMainView.xaml">
+             StartupUri="Views/AdminDashboardView/AdminDashboardMainView.xaml">
     <Application.Resources>
         <ResourceDictionary>
+            <Style TargetType="{x:Type TextBlock}">
+                <Setter Property="FontFamily" Value="Montserrat"/>
+                <!-- Đặt font mặc định -->
+                <Setter Property="FontSize" Value="13"/>
+                <!-- Đặt kích thước font -->
+            </Style>
+            <Style TargetType="{x:Type Control}">
+                <Setter Property="FontFamily" Value="Montserrat"/>
+                <Setter Property="FontSize" Value="16"/>
+            </Style>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
                 <!--<ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />-->
