--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/Share/Footer.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/Share/Footer.xaml
@@ -6,7 +6,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:SystemAnalysisAndDesign.Views.Share"
              mc:Ignorable="d" 
-             d:DesignHeight="175" d:DesignWidth="1280" Background="white">
+             d:DesignHeight="155" d:DesignWidth="1280" Background="white">
     <Grid>
         <Grid Margin="40 10">
             <Grid.RowDefinitions>
@@ -28,46 +28,46 @@
                 <StackPanel Grid.Column="0">
                     <TextBlock Text="MORENT"
                            FontWeight="Bold"
-                           FontSize="24"
+                           FontSize="22"
                            Foreground="#3A63F1"/>
                     <TextBlock Text="Our vision is to provide convenience and help increase your sales business."
                            Foreground="Gray"
-                           FontSize="14"
+                           FontSize="12"
                            Margin="0,10,0,0"
                            TextWrapping="Wrap" Width="300" HorizontalAlignment="Left"/>
                 </StackPanel>
 
                 <!-- About -->
                 <StackPanel Grid.Column="1">
-                    <TextBlock Text="About" FontWeight="Bold" FontSize="16" Margin="0,0,0,10"/>
-                    <TextBlock Text="How it works" Foreground="Gray" Margin="0,4"/>
-                    <TextBlock Text="Featured" Foreground="Gray" Margin="0,4"/>
-                    <TextBlock Text="Partnership" Foreground="Gray" Margin="0,4"/>
-                    <TextBlock Text="Bussiness Relation" Foreground="Gray" Margin="0,4"/>
+                    <TextBlock Text="About" FontWeight="Bold" FontSize="14" Margin="0,0,0,10"/>
+                    <TextBlock Text="How it works" Foreground="Gray" Margin="0,2"/>
+                    <TextBlock Text="Featured" Foreground="Gray" Margin="0,2"/>
+                    <TextBlock Text="Partnership" Foreground="Gray" Margin="0,2"/>
+                    <TextBlock Text="Bussiness Relation" Foreground="Gray" Margin="0,2"/>
                 </StackPanel>
 
                 <!-- Community -->
                 <StackPanel Grid.Column="2">
-                    <TextBlock Text="Community" FontWeight="Bold" FontSize="16" Margin="0,0,0,10"/>
-                    <TextBlock Text="Events" Foreground="Gray" Margin="0,4"/>
-                    <TextBlock Text="Blog" Foreground="Gray" Margin="0,4"/>
-                    <TextBlock Text="Podcast" Foreground="Gray" Margin="0,4"/>
-                    <TextBlock Text="Invite a friend" Foreground="Gray" Margin="0,4"/>
+                    <TextBlock Text="Community" FontWeight="Bold" FontSize="14" Margin="0,0,0,10"/>
+                    <TextBlock Text="Events" Foreground="Gray" Margin="0,2"/>
+                    <TextBlock Text="Blog" Foreground="Gray" Margin="0,2"/>
+                    <TextBlock Text="Podcast" Foreground="Gray" Margin="0,2"/>
+                    <TextBlock Text="Invite a friend" Foreground="Gray" Margin="0,2"/>
                 </StackPanel>
 
                 <!-- Socials -->
                 <StackPanel Grid.Column="3">
-                    <TextBlock Text="Socials" FontWeight="Bold" FontSize="16" Margin="0,0,0,10"/>
-                    <TextBlock Text="Discord" Foreground="Gray" Margin="0,4"/>
-                    <TextBlock Text="Instagram" Foreground="Gray" Margin="0,4"/>
-                    <TextBlock Text="Twitter" Foreground="Gray" Margin="0,4"/>
-                    <TextBlock Text="Facebook" Foreground="Gray" Margin="0,4"/>
+                    <TextBlock Text="Socials" FontWeight="Bold" FontSize="14" Margin="0,0,0,10"/>
+                    <TextBlock Text="Discord" Foreground="Gray" Margin="0,2"/>
+                    <TextBlock Text="Instagram" Foreground="Gray" Margin="0,2"/>
+                    <TextBlock Text="Twitter" Foreground="Gray" Margin="0,2"/>
+                    <TextBlock Text="Facebook" Foreground="Gray" Margin="0,2"/>
                 </StackPanel>
                 
             </Grid>
 
             <!-- Horizontal Line -->
-            <Border Grid.Row="1" Height="0.5" Background="gray" Margin="10,0"/>
+            <Border Grid.Row="1" Height="0.5" Background="gray" Margin="10,-10"/>
 
             <!-- Bottom Copyright -->
             <Grid Grid.Row="2" Margin="0,1,0,0">
